--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,74 +1,75 @@
 <footer class="w-100 px-0">
-    <div class="container max-width-wrapper">
-        <div class="row justify-content-between mx-auto w-100">
-            <!-- 1st container w/SOS logo-->
-            <div class="col-12 col-md-2  col-lg-2 px-0">
-                <img src="./assets/salticorn.png" class="logo">
-            </div>
-            <div class="row col-12 col-md-10 col-lg-6 links-wrapper px-0 justify-content-start justify-content-md-center mx-auto">
-                <!-- 2nd container  w/ T&C, Privacy Policy, and CP -->
-                <div class="list-group-wrapper">
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <a class="link footer-link" routerLink="docs/terms">Terms & Conditions</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a class="link footer-link" routerLink="docs/privacy">Privacy Policy</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a class="link footer-link" routerLink="docs/cookies">Cookies Policy</a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- 3rd container w/disclaimer, EULA, FAQ -->
-                <div class="px-0 list-group-wrapper">
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <a class="link footer-link" routerLink="docs/disclaimer">Disclaimer</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a class="link footer-link" routerLink="docs/eula">EULA</a>
-                        </li>
-                        <li class="list-group-item">
-                            <a class="link footer-link" routerLink="docs/faq">FAQ</a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- 4th container w/ help&support, social media -->
-                <div class="px-0 list-group-wrapper">
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <a class="link footer-link footer-margin-fix" routerLink="support/">Help & Support</a>
-                        </li>
-                        <li class="list-group-item">
-                            <span><a href="" class="social-media link"><img src="./assets/fb.svg"
-                                        class="icon"></a></span>
-                            <span><a href="#" class="social-media-link link"><img src="./assets/ig.svg"
-                                        class="icon"></a></span>
-                            <span><a href="#" class="social-media-link link"><img src="./assets/twitter.svg"
-                                        class="icon"></a></span>
-                            <span><a href="#" class="social-media-link link"><img src="./assets/pt.svg"></a></span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <!-- 5th container w/ subscription cta -->
-            <div class="col-12 col-md-12 col-lg-4 updates-container">
-                <p class="updates">Get updates on new shows</p>
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Email" aria-label="Email"
-                        aria-describedby="basic-addon2">
-                    <button class="input-group-text" id="basic-addon2">Subscribe</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr />
-    <div class="px-0">
-        <div class="mx-auto copyright-wrapper">
-            <div class="px-0 below-text">
-                © 2021 All Rights Reserved
-            </div>
-        </div>
-    </div>
+	<div class="container max-width-wrapper">
+		<div class="row justify-content-between mx-auto w-100">
+			<!-- 1st container w/SOS logo-->
+			<div class="col-12 col-md-2  col-lg-2 px-0">
+				<img src="./assets/salticorn.png" class="logo">
+			</div>
+			<div
+				class="row col-12 col-md-10 col-lg-6 links-wrapper px-0 justify-content-start justify-content-md-center mx-auto">
+				<!-- 2nd container  w/ T&C, Privacy Policy, and CP -->
+				<div class="list-group-wrapper">
+					<ul class="list-group">
+						<li class="list-group-item">
+							<a class="link footer-link" routerLink="docs/terms">Terms & Conditions</a>
+						</li>
+						<li class="list-group-item">
+							<a class="link footer-link" routerLink="docs/privacy">Privacy Policy</a>
+						</li>
+						<li class="list-group-item">
+							<a class="link footer-link" routerLink="docs/cookies">Cookies Policy</a>
+						</li>
+					</ul>
+				</div>
+				<!-- 3rd container w/disclaimer, EULA, FAQ -->
+				<div class="px-0 list-group-wrapper">
+					<ul class="list-group">
+						<li class="list-group-item">
+							<a class="link footer-link" routerLink="docs/disclaimer">Disclaimer</a>
+						</li>
+						<li class="list-group-item">
+							<a class="link footer-link" routerLink="docs/eula">EULA</a>
+						</li>
+						<li class="list-group-item">
+							<a class="link footer-link" routerLink="docs/faq">FAQ</a>
+						</li>
+					</ul>
+				</div>
+				<!-- 4th container w/ help&support, social media -->
+				<div class="px-0 list-group-wrapper">
+					<ul class="list-group">
+						<li class="list-group-item">
+							<a class="link footer-link" routerLink="support/">Help & Support</a>
+						</li>
+						<li class="list-group-item">
+							<span><a href="" class="social-media link"><img src="./assets/fb.svg"
+										class="icon"></a></span>
+							<span><a href="#" class="social-media-link link"><img src="./assets/ig.svg"
+										class="icon"></a></span>
+							<span><a href="#" class="social-media-link link"><img src="./assets/twitter.svg"
+										class="icon"></a></span>
+							<span><a href="#" class="social-media-link link"><img src="./assets/pt.svg"></a></span>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<!-- 5th container w/ subscription cta -->
+			<div class="col-12 col-md-12 col-lg-4 updates-container">
+				<p class="updates">Get updates on new shows</p>
+				<div class="input-group mb-3">
+					<input type="text" class="form-control" placeholder="Email" aria-label="Email"
+						aria-describedby="basic-addon2">
+					<button class="input-group-text" id="basic-addon2">Subscribe</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<hr />
+	<div class="px-0">
+		<div class="mx-auto copyright-wrapper">
+			<div class="px-0 below-text">
+				© 2021 All Rights Reserved
+			</div>
+		</div>
+	</div>
 </footer>
