--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,22 +37,20 @@
                     height="485px"> -->
 			</div>
 		</div>
-		<div class="row align-items-center watch-now">
-			<div class="d-flex justify-content-between align-items-center">
-				<h4 class="section-heading">Watch Now</h4>
-				<div>
-					<div class="swiper-button-container d-flex align-items-center justify-content-center">
-						<div class="swiper-button-prev1 swiper-button-left-wrapper">
-							<button type="button" class="btn btn-left px-0">
-								<img src="../../images/icons/swiper-prev.svg" alt="previous" class="swiper-arrow-prev">
-							</button>
-						</div>
-						<div class="swiper-button-next1 swiper-button-right-wrapper">
-							<button type="button" class="btn btn-right px-0">
-								<img src="../../images/icons/swiper-next.svg" alt="next" class="swiper-arrow-next"
-									width="6px" height="9px">
-							</button>
-						</div>
+		<div class="d-flex justify-content-between align-items-center watch-now">
+			<h4 class="section-heading">Watch Now</h4>
+			<div>
+				<div class="swiper-button-container d-flex align-items-center justify-content-center">
+					<div class="swiper-button-prev1 swiper-button-left-wrapper">
+						<button type="button" class="btn btn-left px-0">
+							<img src="../../images/icons/swiper-prev.svg" alt="previous" class="swiper-arrow-prev">
+						</button>
+					</div>
+					<div class="swiper-button-next1 swiper-button-right-wrapper">
+						<button type="button" class="btn btn-right px-0">
+							<img src="../../images/icons/swiper-next.svg" alt="next" class="swiper-arrow-next"
+								width="6px" height="9px">
+						</button>
 					</div>
 				</div>
 			</div>
@@ -185,22 +183,20 @@
 				</swiper>
 			</div>
 		</div>
-		<div class="row align-items-center just-announced">
-			<div class="d-flex justify-content-between align-items-center">
-				<h4 class="section-heading">Just Announced</h4>
-				<div>
-					<div class="swiper-button-container d-flex align-items-center justify-content-center">
-						<div class="swiper-button-prev2 swiper-button-left-wrapper">
-							<button type="button" class="btn btn-left px-0">
-								<img src="../../images/icons/swiper-prev.svg" alt="previous" class="swiper-arrow-prev">
-							</button>
-						</div>
-						<div class="swiper-button-next2 swiper-button-right-wrapper">
-							<button type="button" class="btn btn-right px-0">
-								<img src="../../images/icons/swiper-next.svg" alt="next" class="swiper-arrow-next"
-									width="6px" height="9px">
-							</button>
-						</div>
+		<div class="d-flex justify-content-between align-items-center just-announced">
+			<h4 class="section-heading">Just Announced</h4>
+			<div>
+				<div class="swiper-button-container d-flex align-items-center justify-content-center">
+					<div class="swiper-button-prev2 swiper-button-left-wrapper">
+						<button type="button" class="btn btn-left px-0">
+							<img src="../../images/icons/swiper-prev.svg" alt="previous" class="swiper-arrow-prev">
+						</button>
+					</div>
+					<div class="swiper-button-next2 swiper-button-right-wrapper">
+						<button type="button" class="btn btn-right px-0">
+							<img src="../../images/icons/swiper-next.svg" alt="next" class="swiper-arrow-next"
+								width="6px" height="9px">
+						</button>
 					</div>
 				</div>
 			</div>
