--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,134 +1,146 @@
-<nav class="navbar navbar-light sticky-top navbar-expand-md" id="nav" *ngIf="showNav">
-  <div class="container px-0 max-width-wrapper mx-auto">
-    <a class="navbar-brand" routerLink="/home">
-      <img src="./assets/salticorn.png" class="logo" width="183px" height="39px" alt="Studio on sunset Logo">
-    </a>
-    <button class="navbar-toggler d-block d-md-none" type="button" data-bs-toggle="offcanvas"
-      data-bs-target="#offcanvas" aria-controls="offcanvas" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fas fa-lg"></i>
-    </button>
-    <div class="navbar d-none d-md-flex w-100">
-      <ul class="list-unstyled d-flex m-0 left-links">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/home" routerLinkActive="alt-color">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/account/my-shows">My Shows</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">
-            <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="27.007"
-              viewBox="0 0 27 27.007">
-              <path
-                d="M31.184,29.545l-7.509-7.58a10.7,10.7,0,1,0-1.624,1.645l7.46,7.53a1.156,1.156,0,0,0,1.631.042A1.163,1.163,0,0,0,31.184,29.545ZM15.265,23.7a8.45,8.45,0,1,1,5.977-2.475A8.4,8.4,0,0,1,15.265,23.7Z"
-                transform="translate(-4.5 -4.493)" fill="#fff" />
-            </svg>
-          </a>
-        </li>
-      </ul>
-      <form class="d-flex align-items-center">
-        <button type="button" class="btn btn-link text-uppercase" routerLink="/login" *ngIf="!user">Login</button>
-        <button class="btn btn-sos-main text-uppercase" type="submit" routerLink="/signup" *ngIf="!user">Sign Up</button>
-        <!-- ------------------------------------------------ -->
-        <!-- if there is a user logged in  ^-->
-        <!-- begin notification wrapper -->
-        <div class="nav-item dropdown notifications-wrapper" *ngIf="user">
-          <a class="nav-link notification-btn" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
-            <div class="notifications-title">Notifications</div>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li class="item-title">Purchased shows</li>
-            <li class="item-body"><a href="#" class="notification-link alt-color">Forever Young</a> streaming in less
-              than 2 hours</li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li class="item-title">New announcements</li>
-            <li class="item-body"><a href="#" class="notification-link alt-color">BedBugs</a> Jenna Doe</li>
-            <li class="item-body"><a href="#" class="notification-link alt-color">Long Rains Special</a> - mau from
-              nowh..</li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li class="item-title">Live Today</li>
-            <li class="item-body"><a href="#" class="notification-link alt-color">Forever Young</a> - Im Young</li>
-          </ul>
-        </div>
-        <div class="d-flex align-items-center" *ngIf="user">
-          <!-- end of notification wrapper ^ -->
-          <div class="dropdown profile-wrapper">
-            <button type="button" class="btn btn-link d-flex align-items-center pe-0" data-bs-toggle="dropdown"
-              aria-expanded="false">{{ user?.username
-              }}
-              <i class="far fa-user-circle fa-2x user-icon" *ngIf="user && !user?.profile?.avatar"></i>
-              <img [src]="user?.profile?.avatar?.url" class="avatar" id="image" *ngIf="user?.profile?.avatar" alt="User Icon" width="47px" height="47px">
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-              <li><a class="dropdown-item" routerLink="/account/profile/my-profile">My Profile</a></li>
-              <li><a class="dropdown-item" routerLink="/support">Support</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" (click)="logout()">Log out</a></li>
-            </ul>
-          </div>
-        </div>
-        <!-- <i class="far fa-user-circle fa-2x user-icon" *ngIf="user && !user?.profile?.avatar"></i>
+<nav class="navbar navbar-light sticky-top navbar-expand-lg" id="nav" *ngIf="showNav">
+	<div class="container px-0 max-width-wrapper mx-auto">
+		<a class="navbar-brand" routerLink="/home">
+			<img src="./assets/salticorn.png" class="logo" width="183px" height="39px" alt="Studio on sunset Logo">
+		</a>
+		<button class="navbar-toggler d-block d-lg-none" type="button" data-bs-toggle="offcanvas"
+			data-bs-target="#offcanvas" aria-controls="offcanvas" aria-expanded="false" aria-label="Toggle navigation">
+			<i class="fas fa-lg"></i>
+		</button>
+		<div class="navbar d-none d-lg-flex w-100">
+			<ul class="list-unstyled d-flex m-0 left-links">
+				<li class="nav-item">
+					<a class="nav-link" aria-current="page" href="/home" routerLinkActive="alt-color">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" aria-current="page" href="/account/my-shows">My Shows</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link">
+						<svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="27.007"
+							viewBox="0 0 27 27.007">
+							<path
+								d="M31.184,29.545l-7.509-7.58a10.7,10.7,0,1,0-1.624,1.645l7.46,7.53a1.156,1.156,0,0,0,1.631.042A1.163,1.163,0,0,0,31.184,29.545ZM15.265,23.7a8.45,8.45,0,1,1,5.977-2.475A8.4,8.4,0,0,1,15.265,23.7Z"
+								transform="translate(-4.5 -4.493)" fill="#fff" />
+						</svg>
+					</a>
+				</li>
+			</ul>
+			<form class="d-flex align-items-center">
+				<button type="button" class="btn btn-link text-uppercase" routerLink="/login"
+					*ngIf="!user">Login</button>
+				<button class="btn btn-sos-main text-uppercase" type="submit" routerLink="/signup" *ngIf="!user">Sign
+					Up</button>
+				<!-- ------------------------------------------------ -->
+				<!-- if there is a user logged in  ^-->
+				<!-- begin notification wrapper -->
+				<div class="nav-item dropdown notifications-wrapper" *ngIf="user">
+					<a class="nav-link notification-btn" href="#" id="navbarDropdown" role="button"
+						data-bs-toggle="dropdown" aria-expanded="false">
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
+						<div class="notifications-title">Notifications</div>
+						<li>
+							<hr class="dropdown-divider">
+						</li>
+						<li class="item-title">Purchased shows</li>
+						<li class="item-body"><a href="#" class="notification-link alt-color">Forever Young</a>
+							streaming in less
+							than 2 hours</li>
+						<li>
+							<hr class="dropdown-divider">
+						</li>
+						<li class="item-title">New announcements</li>
+						<li class="item-body"><a href="#" class="notification-link alt-color">BedBugs</a> Jenna Doe</li>
+						<li class="item-body"><a href="#" class="notification-link alt-color">Long Rains Special</a> -
+							mau from
+							nowh..</li>
+						<li>
+							<hr class="dropdown-divider">
+						</li>
+						<li class="item-title">Live Today</li>
+						<li class="item-body"><a href="#" class="notification-link alt-color">Forever Young</a> - Im
+							Young</li>
+					</ul>
+				</div>
+				<div class="d-flex align-items-center" *ngIf="user">
+					<!-- end of notification wrapper ^ -->
+					<div class="dropdown profile-wrapper">
+						<button type="button" class="btn btn-link d-flex align-items-center pe-0"
+							data-bs-toggle="dropdown" aria-expanded="false">{{ user?.username
+							}}
+							<i class="far fa-user-circle fa-2x user-icon" *ngIf="user && !user?.profile?.avatar"></i>
+							<img [src]="user?.profile?.avatar?.url" class="avatar" id="image"
+								*ngIf="user?.profile?.avatar" alt="User Icon" width="47px" height="47px">
+						</button>
+						<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+							<li><a class="dropdown-item" routerLink="/account/profile/my-profile">My Profile</a></li>
+							<li><a class="dropdown-item" routerLink="/support">Support</a></li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+							<li><a class="dropdown-item" (click)="logout()">Log out</a></li>
+						</ul>
+					</div>
+				</div>
+				<!-- <i class="far fa-user-circle fa-2x user-icon" *ngIf="user && !user?.profile?.avatar"></i>
           <img [src]="user?.profile?.avatar?.url" class="avatar" id="image" *ngIf="user?.profile?.avatar" alt="User Icon"> -->
-      </form>
-    </div>
-    <!-- begin offcanvas content for mobile menu -->
-    <div class="offcanvas offcanvas-start" id="offcanvas">
-      <div class="offcanvas-header pt-0">
-        <a class="navbar-brand" routerLink="/">
-          <img src="./assets/sos-logo.svg" class="logo" width="82px" height="52px" alt="Studio on Sunset Logo">
-        </a>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <!-- begin content for mobile menu -->
-      <!-- ********************************************** -->
-      <ul class="offcanvas-body list-unstyled">
-        <h5 class="offcanvas-title" id="offcanvasTitle">Menu</h5>
-        <li class="nav-item" routerLinkActive="home-link-active">
-          <a class="nav-link d-flex align-items-center" aria-current="page" href="/home" routerLink="/home" routerLinkActive="home-link-active"
-            data-bs-dismiss="offcanvas"><img src="../../../images/icons/mobile-home.svg" alt="home"
-              class="mobile-menu-icon" width="20px" height="20px">
-              <span class="canvas-link-text">Home</span>
-            </a>
-        </li>
-        <li class="nav-item" routerLinkActive="ticket-link-active">
-          <a class="nav-link d-flex align-items-center" aria-current="page" href="/" routerLink="/shows" routerLinkActive="ticket-link-active"
-            data-bs-dismiss="offcanvas"><img src="../../../images/icons/mobile-ticket.svg" alt="tickets"
-              class="mobile-menu-icon" width="20px" height="20px">
-              <span class="canvas-link-text">My Shows</span>
-            </a>
-        </li>
-        <li class="nav-item" routerLinkActive="profile-link-active">
-          <a class="nav-link d-flex align-items-center" aria-current="page" href="/account/profile/my-profile" routerLink="/account/profile/my-profile" routerLinkActive="profile-link-active"
-            data-bs-dismiss="offcanvas"><img src="../../../images/icons/mobile-user-circle.svg" alt="User icon"
-              class="mobile-menu-icon" width="20px" height="20px">
-              <span class="canvas-link-text">My Profile</span>
-            </a>
-        </li>
-      </ul>
-      <form class="d-flex flex-column align-items-center no-user">
-        <button type="button" class="btn btn-link" routerLink="/login" *ngIf="!user"
-          data-bs-dismiss="offcanvas">Login</button>
-        <button class="btn btn-sos-main" type="submit" routerLink="/signup" *ngIf="!user"
-          data-bs-dismiss="offcanvas">Sign Up</button>
-        <!-- ------------------------------------------------ -->
-        <div class="w-100" *ngIf="user">
-          <div class="mobile-user-wrapper">
-            <a class="nav-link alt-color" (click)="logout()" data-bs-dismiss="offcanvas">Log out</a>
-            <a _ngcontent-serverapp-c70="" routerlink="support/" class="nav-link mobile-support-link"
-              ng-reflect-router-link="support/" href="/support" data-bs-dismiss="offcanvas">Help &amp; Support</a>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
+			</form>
+		</div>
+		<!-- begin offcanvas content for mobile menu -->
+		<div class="offcanvas offcanvas-start" id="offcanvas">
+			<div class="offcanvas-header pt-0">
+				<a class="navbar-brand" routerLink="/">
+					<img src="./assets/sos-logo.svg" class="logo" width="82px" height="52px"
+						alt="Studio on Sunset Logo">
+				</a>
+				<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+					aria-label="Close"></button>
+			</div>
+			<!-- begin content for mobile menu -->
+			<!-- ********************************************** -->
+			<ul class="offcanvas-body list-unstyled">
+				<h5 class="offcanvas-title" id="offcanvasTitle">Menu</h5>
+				<li class="nav-item" routerLinkActive="home-link-active">
+					<a class="nav-link d-flex align-items-center" aria-current="page" href="/home" routerLink="/home"
+						routerLinkActive="home-link-active" data-bs-dismiss="offcanvas"><img
+							src="../../../images/icons/mobile-home.svg" alt="home" class="mobile-menu-icon" width="20px"
+							height="20px">
+						<span class="canvas-link-text">Home</span>
+					</a>
+				</li>
+				<li class="nav-item" routerLinkActive="ticket-link-active">
+					<a class="nav-link d-flex align-items-center" aria-current="page" href="/" routerLink="/shows"
+						routerLinkActive="ticket-link-active" data-bs-dismiss="offcanvas"><img
+							src="../../../images/icons/mobile-ticket.svg" alt="tickets" class="mobile-menu-icon"
+							width="20px" height="20px">
+						<span class="canvas-link-text">My Shows</span>
+					</a>
+				</li>
+				<li class="nav-item" routerLinkActive="profile-link-active">
+					<a class="nav-link d-flex align-items-center" aria-current="page" href="/account/profile/my-profile"
+						routerLink="/account/profile/my-profile" routerLinkActive="profile-link-active"
+						data-bs-dismiss="offcanvas"><img src="../../../images/icons/mobile-user-circle.svg"
+							alt="User icon" class="mobile-menu-icon" width="20px" height="20px">
+						<span class="canvas-link-text">My Profile</span>
+					</a>
+				</li>
+			</ul>
+			<form class="d-flex flex-column align-items-center no-user">
+				<button type="button" class="btn btn-link" routerLink="/login" *ngIf="!user"
+					data-bs-dismiss="offcanvas">Login</button>
+				<button class="btn btn-sos-main" type="submit" routerLink="/signup" *ngIf="!user"
+					data-bs-dismiss="offcanvas">Sign Up</button>
+				<!-- ------------------------------------------------ -->
+				<div class="w-100" *ngIf="user">
+					<div class="mobile-user-wrapper">
+						<a class="nav-link alt-color" (click)="logout()" data-bs-dismiss="offcanvas">Log out</a>
+						<a _ngcontent-serverapp-c70="" routerlink="support/" class="nav-link mobile-support-link"
+							ng-reflect-router-link="support/" href="/support" data-bs-dismiss="offcanvas">Help &amp;
+							Support</a>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
 </nav>
