--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -347,13 +347,10 @@ nav {
 			width: 47px;
 		}
 	}
-	// .max-width-wrapper {
-	// 	@extend %container;
-	// }
 }
 
 @media (min-width: 768px) {
-	.navbar-expand-md .navbar-nav .nav-link {
+	.navbar-expand-lg .navbar-nav .nav-link {
 		padding-right: 1rem;
 		padding-left: 1rem;
 		&:hover {
