--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
 	<div class="heading">
 		<div class="d-flex align-items-center feature-wrapper">
 			<div class="event-wrapper">
-				<div class="artist-name">{{ featuredEvent?.performers[0]?.name }}</div>
+				<p class="artist-name">{{ featuredEvent?.performers[0]?.name }}</p>
 				<h1 class="event-name">{{ featuredEvent?.name }}</h1>
 				<div class="event-date d-flex">
 					<div class="event-details-wrapper d-flex align-items-center me-3">
@@ -70,8 +70,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -86,8 +86,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -102,8 +102,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -118,8 +118,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -134,8 +134,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -150,8 +150,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -166,8 +166,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -222,8 +222,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -238,8 +238,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -254,8 +254,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -270,8 +270,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -286,8 +286,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -302,8 +302,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
@@ -318,8 +318,8 @@
                                 </div> -->
 								</div>
 								<div class="card-details">
-									<div class="event alt-color">{{ featuredEvent?.name }}</div>
-									<div class="artist">{{ featuredEvent?.performers[0]?.name }}</div>
+									<p class="event alt-color">{{ featuredEvent?.name }}</p>
+									<p class="artist">{{ featuredEvent?.performers[0]?.name }}</p>
 								</div>
 							</div>
 						</div>
