--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -79,6 +79,7 @@
 				border-radius: 10px;
 			}
 			.event {
+				font-size: em(18);
 				margin: 20px 0 5px 0;
 				font-weight: 700;
 				overflow: hidden;
@@ -159,10 +160,10 @@
 	}
 	.artist-name {
 		color: #ffdc4e;
-		font-size: 26px;
+		font-size: rem(24);
 		font-weight: 700;
-		@media (max-width: 992px) {
-			font-size: 22px;
+		@media (min-width: 1200px) {
+			font-size: rem(28);
 		}
 	}
 	.bg-white {
@@ -203,11 +204,11 @@
 		margin-right: 10px;
 	}
 	.cal-text {
-		font-size: 16px;
+		font-size: rem(18);
 		color: #fff;
 		margin-right: 20px;
-		@media (max-width: 768px) {
-			font-size: 14px;
+		@media (max-width: 375px) {
+			font-size: 1rem;
 			white-space: nowrap;
 			margin-right: 0;
 		}
@@ -221,25 +222,39 @@
 		}
 	}
 	.event-name {
-		font-size: 60px;
+		font-size: rem(32);
 		color: #fff;
 		font-weight: 800;
 		margin-bottom: 20px;
 		max-width: 800px;
-		@media (max-width: 1250px) {
-			font-size: 52px;
+		font-size: clamp(2rem, 1.5728rem + 1.8987vw, 3.75rem);
+		@media (min-width: 576px) {
+			font-size: rem(42);
+			font-size: clamp(2rem, 1.5728rem + 1.8987vw, 3.75rem);
 		}
-		@media (max-width: 1015px) {
-			font-size: clamp(2rem, 1.5728rem + 1.8987vw, 2.75rem);
+		@media (min-width: 1200px) {
+			font-size: rem(48);
+			font-size: clamp(2rem, 1.5728rem + 1.8987vw, 3.75rem);
 		}
+		@media (min-width: 1440px) {
+			font-size: rem(60);
+			font-size: clamp(2rem, 1.5728rem + 1.8987vw, 3.75rem);
+		}
+		// @media (max-width: 1250px) {
+		// 	font-size: rem(52);
+		// }
+		// @media (max-width: 1015px) {
+		// 	font-size: clamp(2rem, 1.5728rem + 1.8987vw, 2.75rem);
+		// }
 		@media (max-width: 992px) {
-			font-size: 34px;
+			font-size: rem(34);
 			max-width: 450px;
+			font-size: clamp(2rem, 1.5728rem + 1.8987vw, 3.75rem);
 		}
-		@media (max-width: 768px) {
-			font-size: 32px;
-			margin: 0 auto 20px auto;
-		}
+		// @media (max-width: 768px) {
+		// 	font-size: 32px;
+		// 	margin: 0 auto 20px auto;
+		// }
 	}
 	.badge-wrapper {
 		margin: 20px auto 35px auto;
@@ -250,7 +265,7 @@
 	.event-wrapper {
 		padding-right: 20px;
 		@media (max-width: 992px) {
-			width: 125%;
+			width: 146%;
 		}
 		@media (max-width: 768px) {
 			padding-right: 0;
@@ -269,51 +284,51 @@
 		color: #ffdc4e;
 	}
 	.preview-pic-wrapper {
-		justify-content: flex-end;
-		@media (max-width: 992px) {
-			width: 80%;
-		}
-		@media (max-width: 768px) {
+		@media (min-width: 768px) {
 			width: 100%;
 			max-width: 454px;
 			justify-content: center;
 		}
-		@media (max-width: 525px) {
-			width: 100%;
-			max-width: 325px;
-			justify-content: center;
-		}
+		// @media (max-width: 525px) {
+		// 	width: 90%;
+		// 	max-width: 325px;
+		// 	justify-content: center;
+		// }
 	}
 	.preview-pic {
-		width: 485px;
-		height: auto;
 		border-radius: 10px;
-		@media (max-width: 1200px) {
-			width: 370px;
+		@media (max-width: 997px) {
+			width: 90%;
 		}
-		@media (max-width: 995px) {
-			width: 325px;
+		@media (max-width: 768px) {
+			width: 60%;
 		}
+
 		@media (max-width: 768px) {
 			position: unset;
 			left: unset;
 			margin-bottom: 50px;
 		}
-		@media (max-width: 350px) {
-			width: 100%;
-		}
+
+		// @media (min-width: 1440px) {
+		// 	width: 90%;
+		// }
+		// @media (min-width: 1440px) {
+		// 	width: 90%;
+		// }
 	}
 	.section-heading {
 		font-weight: 800;
 		color: #fff;
-		font-size: 34px;
+		font-size: rem(36);
 		white-space: nowrap;
 		@media (max-width: 576px) {
 			font-size: 28px;
 			margin-bottom: 0;
 		}
-		@media (max-width: 350px) {
-			font-size: 24px;
+
+		@media (max-width: 576px) {
+			font-size: rem(24);
 		}
 	}
 	.watch-now {
