--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;600;700;800&display=swap');
 @import './app/app.component.scss';
 
-$grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 1185px, xl: 1200px, xxl: 1400px);
-
 body {
 	background-color: #1a2030 !important;
 	// background-color: darkgrey !important;
@@ -15,6 +13,12 @@ body {
 }
 *:focus {
 	box-shadow: none !important;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+	object-fit: cover;
 }
 
 .max-width-wrapper,
