--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,3 +1,5 @@
+@import '../../app.component.scss';
+
 footer {
 	background-color: #171a20;
 
@@ -55,39 +57,38 @@ footer {
 		// 	}
 		// }
 
-		@media (max-width: 1200px) {
-			padding-left: 10px;
-		}
+		// @media (max-width: 1200px) {
+		// 	padding-left: 10px;
+		// }
 
-		@media (max-width: 768px) {
-			padding-left: unset;
-		}
+		// @media (max-width: 768px) {
+		// 	padding-left: unset;
+		// }
 	}
 
 	.list-group-wrapper {
 		max-width: 170px;
 		margin-right: 32px;
 
-		@media (max-width: 1440px) {
-			margin-right: 30px;
-		}
+		// @media (max-width: 1440px) {
+		// 	margin-right: 30px;
+		// }
 
-		@media (max-width: 825px) {
-			margin-right: 22px;
-		}
+		// @media (max-width: 825px) {
+		// 	margin-right: 22px;
+		// }
 
-		@media (max-width: 767px) {
-			margin-top: 30px;
-		}
+		// @media (max-width: 767px) {
+		// 	margin-top: 30px;
+		// }
 
-		@media (max-width: 450px) {
-			max-width: 150px;
-		}
+		// @media (max-width: 450px) {
+		// 	max-width: 150px;
+		// }
 	}
 
 	.logo {
 		width: 142px;
-		height: 30px;
 	}
 
 	.title {
@@ -106,8 +107,8 @@ footer {
 		max-width: 415px;
 		padding: 0;
 
-		@media (max-width: 1184px) {
-			margin-top: 30px;
+		@media (max-width: 1200px) {
+			margin-top: em(50);
 		}
 	}
 
@@ -120,21 +121,28 @@ footer {
 		}
 	}
 
-	.links-wrapper .list-group-wrapper:nth-child(2) {
-		max-width: 100px;
+	.links-wrapper {
+		@media (max-width: 768px) {
+			margin-top: em(40);
+		}
+
+		.list-group-wrapper:last-of-type {
+			@media (max-width: 684px) {
+				margin-top: em(40);
+			}
+		}
+	}
+
+	.list-group-wrapper:nth-child(2) {
 		margin-right: 28px;
-
-		@media (max-width: 1440px) {
-			margin-right: 28px;
-		}
 	}
 
-	.links-wrapper .list-group-wrapper:nth-child(1) {
-		// padding-left: 20px !important;
-		@media (max-width: 767px) {
-			padding-left: 0 !important;
-		}
-	}
+	// .links-wrapper .list-group-wrapper:nth-child(1) {
+	// 	// padding-left: 20px !important;
+	// 	@media (max-width: 767px) {
+	// 		padding-left: 0 !important;
+	// 	}
+	// }
 }
 
 .max-width-wrapper {
