--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -110,18 +110,18 @@ nav {
 			opacity: 1;
 		}
 		.offcanvas-header {
-			padding: 1rem 28px;
-			@media (max-width: 500px) {
-				padding: 1rem 10px;
-			}
-			@media (max-width: 575px) {
-				padding-right: 25px;
-				padding-left: 25px;
-			}
-			@media (max-width: 500px) {
-				padding-right: 7px;
-				padding-left: 7px;
-			}
+			// padding: 1rem 28px;
+			// @media (max-width: 500px) {
+			// 	padding: 1rem 10px;
+			// }
+			// @media (max-width: 575px) {
+			// 	padding-right: 25px;
+			// 	padding-left: 25px;
+			// }
+			// @media (max-width: 500px) {
+			// 	padding-right: 7px;
+			// 	padding-left: 7px;
+			// }
 		}
 
 		.offcanvas-title {
@@ -163,21 +163,21 @@ nav {
 				a {
 					width: 100%;
 					height: 60px;
+					font-size: rem(18);
 					.canvas-link-text {
 						line-height: 1rem;
 						padding-left: 15px;
 					}
 				}
-				font-size: 18px;
 				&:last-child {
 					margin-bottom: 50px;
 				}
-				@media (max-width: 575px) {
-					font-size: 16px;
-				}
-				@media (max-width: 375px) {
-					font-size: 14px;
-				}
+				// @media (max-width: 575px) {
+				// 	font-size: 16px;
+				// }
+				// @media (max-width: 375px) {
+				// 	font-size: 14px;
+				// }
 			}
 		}
 		.no-user {
