--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,11 +2,11 @@
 	<div class="container max-width-wrapper">
 		<div class="row justify-content-between mx-auto w-100">
 			<!-- 1st container w/SOS logo-->
-			<div class="col-12 col-md-3 col-lg-2 px-0">
+			<div class="col-12 col-md-2 px-0">
 				<img src="./assets/salticorn.png" class="logo">
 			</div>
 			<div
-				class="row col-12 col-md-9 col-xl-6 links-wrapper px-0 justify-content-start justify-content-md-center mx-auto">
+				class="row col-12 col-md-10 col-xl-6 links-wrapper px-0 justify-content-start justify-content-md-center mx-auto">
 				<!-- 2nd container  w/ T&C, Privacy Policy, and CP -->
 				<div class="list-group-wrapper">
 					<ul class="list-group">
@@ -54,7 +54,7 @@
 				</div>
 			</div>
 			<!-- 5th container w/ subscription cta -->
-			<div class="col-12 col-md-12 col-lg-4 updates-container">
+			<div class="col-12 col-xl-4 updates-container">
 				<p class="updates">Get updates on new shows</p>
 				<div class="input-group mb-3">
 					<input type="text" class="form-control" placeholder="Email" aria-label="Email"
