fix: html and navbar edits

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,13 +9,14 @@
 				<h1 class="event-name">{{ featuredEvent?.name }}</h1>
 				<div class="event-date d-flex">
 					<div class="event-details-wrapper d-flex align-items-center me-3">
-						<img src="./assets/calendar.svg" alt="calendar" class="cal-icon"> <span class="cal-text">{{
-							setEventStartDate(featuredEvent?.start)}}</span>
+						<!-- <img src="./assets/calendar.svg" alt="calendar" class="cal-icon"> <span class="cal-text">{{
+							setEventStartDate(featuredEvent?.start)}}</span> -->
+						<p>Coming to Salticorn on <strong>05 September 2021</strong></p>
 					</div>
-					<div class="event-details-wrapper  event-time d-flex align-items-center">
+					<!-- <div class="event-details-wrapper  event-time d-flex align-items-center">
 						<img src="./assets/time.svg" alt="clock" class="cal-icon"> <span class="cal-text">{{
 							setEventStartTime(featuredEvent?.start)}}</span>
-					</div>
+					</div> -->
 				</div>
 				<div class="row badge-wrapper">
 					<div class="col-12 px-0">
