refactor: took away badges

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,8 +7,8 @@
 			<div class="event-wrapper">
 				<p class="artist-name">{{ featuredEvent?.performers[0]?.name }}</p>
 				<h1 class="event-name">{{ featuredEvent?.name }}</h1>
-				<div class="event-date d-flex">
-					<div class="event-details-wrapper d-flex align-items-center me-3">
+				<div class="event-date">
+					<div class="event-details-wrapper me-3">
 						<!-- <img src="./assets/calendar.svg" alt="calendar" class="cal-icon"> <span class="cal-text">{{
 							setEventStartDate(featuredEvent?.start)}}</span> -->
 						<p>Coming to Salticorn on <strong>05 September 2021</strong></p>
@@ -18,12 +18,12 @@
 							setEventStartTime(featuredEvent?.start)}}</span>
 					</div> -->
 				</div>
-				<div class="row badge-wrapper">
+				<!-- <div class="row badge-wrapper">
 					<div class="col-12 px-0">
 						<span class="badge bg-white">LIVE</span>
 						<span class="badge bg-outline-white">FHD</span>
 					</div>
-				</div>
+				</div> -->
 				<div class="row purchase-btn-wrapper">
 					<div class="col-12">
 						<button type="button" class="btn btn-outline-purchase"
