--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,7 +44,8 @@
 				<div class="swiper-button-container d-flex align-items-center justify-content-center">
 					<div class="swiper-button-prev1 swiper-button-left-wrapper">
 						<button type="button" class="btn btn-left px-0">
-							<img src="../../images/icons/swiper-prev.svg" alt="previous" class="swiper-arrow-prev">
+							<img src="../../images/icons/swiper-prev.svg" alt="previous" class="swiper-arrow-prev"
+								width="6px" height="9px">
 						</button>
 					</div>
 					<div class="swiper-button-next1 swiper-button-right-wrapper">
@@ -190,7 +191,8 @@
 				<div class="swiper-button-container d-flex align-items-center justify-content-center">
 					<div class="swiper-button-prev2 swiper-button-left-wrapper">
 						<button type="button" class="btn btn-left px-0">
-							<img src="../../images/icons/swiper-prev.svg" alt="previous" class="swiper-arrow-prev">
+							<img src="../../images/icons/swiper-prev.svg" alt="previous" class="swiper-arrow-prev"
+								width="6px" height="9px">
 						</button>
 					</div>
 					<div class="swiper-button-next2 swiper-button-right-wrapper">
