refactor: remove unused CSS media queries

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,9 @@
+/* Sass Variables */
+
+$clr-primary: #ffdc4e;
+
+/* Sass Mixins/Functions */
+
 /* container for max-width-wrapper class */
 @mixin container {
 	max-width: 1440px !important;
