--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -46,37 +46,11 @@ footer {
 		font-size: 14px;
 		font-weight: 600;
 		color: #adb5cb;
-
-		//put in to compensate for footer icons slightly widening list items.
-		//TODO: figure out way to remove this class from being needed
-		// .footer-margin-fix {
-		// 	margin-left: -1px;
-
-		// 	@media (max-width: 768px) {
-		// 		margin-left: inherit;
-		// 	}
-		// }
-
-		// @media (max-width: 1200px) {
-		// 	padding-left: 10px;
-		// }
-
-		// @media (max-width: 768px) {
-		// 	padding-left: unset;
-		// }
 	}
 
 	.list-group-wrapper {
 		max-width: 170px;
 		margin-right: 32px;
-
-		// @media (max-width: 1440px) {
-		// 	margin-right: 30px;
-		// }
-
-		// @media (max-width: 825px) {
-		// 	margin-right: 22px;
-		// }
 
 		@media (max-width: 767px) {
 			margin-top: 30px;
@@ -122,80 +96,22 @@ footer {
 	}
 
 	.links-wrapper {
-		// @media (max-width: 768px) {
-		// 	margin-top: em(40);
-		// }
-
-		// .list-group-wrapper:last-of-type {
-		// 	@media (max-width: 684px) {
-		// 		margin-top: em(40);
-		// 	}
-		// }
-	}
-
-	.list-group-wrapper:nth-child(2) {
-		max-width: 100px;
-		margin-right: 28px;
-	}
-
-	.links-wrapper .list-group-wrapper:nth-child(1) {
-		// padding-left: 20px !important;
-		@media (max-width: 767px) {
-			padding-left: 0 !important;
+		.list-group-wrapper:nth-child(2) {
+			max-width: 100px;
+			margin-right: 28px;
+		}
+		.list-group-wrapper:nth-child(1) {
+			@media (max-width: 767px) {
+				padding-left: 0 !important;
+			}
 		}
 	}
 }
 
 .max-width-wrapper {
-	//   max-width: 1575px !important;
-	padding: 45px 0px 20px 0px;
-
-	//   @media (min-width: 1575px) {
-	//     padding-left: 70px;
-	//     padding-right: 70px;
-	//   }
-
-	//   @media (max-width: 1200px) {
-	//     padding-left: 45px;
-	//     padding-right: 45px;
-	//   }
-
-	//   @media (max-width: 992px) {
-	//     padding-left: 32px;
-	//     padding-right: 32px;
-	//   }
-
-	//   @media (max-width: 576px) {
-	//     padding-left: 30px;
-	//     padding-right: 30px;
-	//   }
-
-	//   @media (max-width: 500px) {
-	//     padding-left: 11px;
-	//     padding-right: 11px;
-	//   }
+	padding: em(45) 0px em(20) 0px;
 }
 
 .copyright-wrapper {
-	padding: 20px 0px;
-
-	// @media (max-width: 1200px) {
-	// 	padding-left: 45px;
-	// 	padding-right: 45px;
-	// }
-
-	// @media (max-width: 992px) {
-	// 	padding-left: 32px;
-	// 	padding-right: 32px;
-	// }
-
-	// @media (max-width: 576px) {
-	// 	padding-left: 30px;
-	// 	padding-right: 30px;
-	// }
-
-	// @media (max-width: 500px) {
-	// 	padding-left: 11px;
-	// 	padding-right: 11px;
-	// }
+	padding: em(20) 0px;
 }
