--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -226,39 +226,25 @@
 		font-weight: 600;
 	}
 	.event-name {
+		// fallback for browser support
 		font-size: rem(34);
+		font-size: clamp(2rem, 1.5728rem + 1.4987vw, 3.75rem);
 		color: #fff;
 		font-weight: 800;
 		margin-bottom: 20px;
 		width: 18ch;
-		font-size: clamp(2rem, 1.5728rem + 1.4987vw, 3.75rem);
-		// @media (min-width: 576px) {
-		// 	font-size: rem(42);
-		// 	font-size: clamp(2rem, 1.5728rem + 1.8987vw, 3.75rem);
-		// }
+
 		@media (min-width: 1200px) {
+			// fallback for browser support
 			font-size: rem(48);
 			font-size: clamp(2rem, 1.5728rem + 1.4987vw, 3.75rem);
 		}
-		// @media (min-width: 1440px) {
-		// 	font-size: rem(60);
-		// 	font-size: clamp(2rem, 1.5728rem + 1.8987vw, 3.75rem);
-		// }
-		// @media (max-width: 1250px) {
-		// 	font-size: rem(52);
-		// }
-		// @media (max-width: 1015px) {
-		// 	font-size: clamp(2rem, 1.5728rem + 1.8987vw, 2.75rem);
-		// }
+
 		@media (max-width: 768px) {
 			max-width: 450px;
 			margin-right: auto;
 			margin-left: auto;
 		}
-		// @media (max-width: 768px) {
-		// 	font-size: 32px;
-		// 	margin: 0 auto 20px auto;
-		// }
 	}
 	.badge-wrapper {
 		margin: 20px auto 35px auto;
@@ -293,17 +279,10 @@
 			max-width: 454px;
 			justify-content: center;
 		}
-		// @media (max-width: 525px) {
-		// 	width: 90%;
-		// 	max-width: 325px;
-		// 	justify-content: center;
-		// }
 	}
 	.preview-pic {
 		border-radius: 10px;
-		// @media (max-width: 997px) {
-		// 	width: 90%;
-		// }
+
 		@media (max-width: 768px) {
 			width: 60%;
 		}
@@ -313,13 +292,6 @@
 			left: unset;
 			margin-bottom: 50px;
 		}
-
-		// @media (min-width: 1440px) {
-		// 	width: 90%;
-		// }
-		// @media (min-width: 1440px) {
-		// 	width: 90%;
-		// }
 	}
 	.section-heading {
 		font-weight: 800;
@@ -357,31 +329,3 @@
 	min-height: 100vh;
 	width: 100%;
 }
-
-// .max-width-wrapper {
-//   max-width: 1575px !important;
-//   padding: 50px 48px 330px 46px;
-//   @media (min-width: 1575px) {
-//     padding-left: 70px;
-//     padding-right: 70px;
-//   }
-//   @media (max-width: 1200px) {
-//     padding-left: 20px;
-//     padding-right: 20px;
-//   }
-//   @media (max-width: 992px) {
-//     padding-left: 5px;
-//     padding-right: 5px;
-//   }
-//   @media (max-width: 768px) {
-//     padding-top: 35px;
-//   }
-//   @media (max-width: 575px) {
-//     padding-left: 15px;
-//     padding-right: 15px;
-//   }
-//   @media (max-width: 475px) {
-//     padding-left: 0;
-//     padding-right: 0;
-//   }
-// }
