fix: alignment and html layout

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,8 +38,8 @@
                     height="485px"> -->
 			</div>
 		</div>
-		<div class="d-flex justify-content-between align-items-center watch-now">
-			<h4 class="section-heading">Watch Now</h4>
+		<div class="d-flex justify-content-between align-items-center section-heading watch-now">
+			<h4 class="section-title">Watch Now</h4>
 			<div>
 				<div class="swiper-button-container d-flex align-items-center justify-content-center">
 					<div class="swiper-button-prev1 swiper-button-left-wrapper">
@@ -185,8 +185,8 @@
 				</swiper>
 			</div>
 		</div>
-		<div class="d-flex justify-content-between align-items-center just-announced">
-			<h4 class="section-heading">Just Announced</h4>
+		<div class="d-flex justify-content-between align-items-center section-heading just-announced">
+			<h4 class="section-title">Just Announced</h4>
 			<div>
 				<div class="swiper-button-container d-flex align-items-center justify-content-center">
 					<div class="swiper-button-prev2 swiper-button-left-wrapper">
